--- a/config.yaml
+++ b/config.yaml
@@ -2,3 +2,10 @@ baseURL: https://trulede.github.io/hugo/
 languageCode: en-us
 title: Hugo Test Site.
 theme: acedoc
+
+module:
+  imports:
+    - path: github.com/trulede/raspberry.docker
+      mounts:
+        - source: doc
+          target: content/repos
