--- a/config.yaml
+++ b/config.yaml
@@ -6,6 +6,7 @@ theme: acedoc
 module:
   imports:
     - path: github.com/trulede/raspberry.docker
+      disable: false
       mounts:
         - source: doc
           target: content/repos
